<resources>
    <string name="app_name">MyViewAndViews</string>
    <string name="content_text">Google telah resmi mengumumkan brand ponsel "Pixel" yang telah lama dinanti-nanti; yaitu "Pixel" dan "Pixel XL", pada 8 Oktober. Kita menghadiri Google London UK mirroring the main one taking place in San Francisco, US, where the firm unwrapped the new Android 7.1 Nougat devices which will apparently usurp Google’s long-standing Nexus series</string>
    <string name="content_specs_display" >5.0 Inch\n FHD Amoled at 441ppi\n 2.5D Corning</string>
    <string name="content_specs_size">5.6 x 2.7 x 0.2 ~ 0.3 inches 143.8 x 69.5 x 7.3 ~ 8.5 mm</string>
    <string name="content_specs_battery">2,770 mAh battery\n
    Standby time (LTE): up to 19 days\n
    Talk time (3g/WCDMA): up to 26 hours\n
    Internet use time (Wi-Fi): up to 13 hours\n
    Internet use time (LTE): up to 13 hours\n
    Video playback: up to 13 hours\n
    Audio playback (via headset): up to 110 hours\n
    Fast charging: up to 7 hours of use from only 15 minutes of charging</string>
    <string name="stock">Stok tersisa 5 biji</string>
    <string name="specification">Spesifikasi</string>
    <string name="display">Display</string>
    <string name="size">Size</string>
    <string name="battery">Battery</string>
    <string name="seller">Dijual Oleh</string>
    <string name="my_name">Al Kindi F.</string>
    <string name="buy">Beli</string>
    <string name="saldo_abal_abal">$735</string>
    <string name="foto_abal_abal">6 foto</string>
</resources>