<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/pixel_google"
                />
            <TextView
                style="@style/TextContent.white"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:background="#4D000000"
                android:drawableStart="@drawable/ic_collections_white_18dp"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/foto_abal_abal"
                />


        </FrameLayout>

        <TextView
            style="@style/TextContent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/saldo_abal_abal"
            android:textSize="32sp"
            />


        <TextView
            style="@style/TextContent.subtitle"
            android:layout_marginBottom="16dp"
            android:text="@string/stock"
            />
<TextView
   style="@style/TextContent"
    android:layout_marginBottom="16dp"
    android:lineSpacingMultiplier="1"
    android:text="@string/content_text"
    />
<TextView
    style="@style/TextContent.subtitle"
    android:layout_marginBottom="8dp"
    android:text="@string/specification"
    />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/display"/>
                <TextView
                  style="@style/TextSpec.Field"
                    android:text="@string/content_specs_display"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/size"/>

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/content_specs_size"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/battery"
                    />

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/content_specs_battery"/>
            </TableRow>
        </TableLayout>

<TextView
    style="@style/TextContent.subtitle"
    android:layout_marginBottom="8dp"
    android:text="@string/seller"
    />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/foto_profil"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_centerVertical="true"
                android:src="@drawable/dsc_2314_copy"/>

            <TextView
                style="@style/TextContent"
                android:layout_toEndOf="@+id/foto_profil"
                android:text="@string/my_name"
                />
        </RelativeLayout>
<Button
    style="@style/ButtonGeneral"
    android:text="@string/buy"/>

    </LinearLayout>


</ScrollView>